# matrix_lib

./: CMakeLists.txt  console_application.cpp
matrix_lib/: Matrix.cpp  Matrix.h  exceptions.cpp  exceptions.h  gaussian_based.cpp  gaussian_based.h  matrix_lib.h
matrix_lib/gaussian_elimination/: elimination.cpp  elimination.h  operations.cpp  operations.h
tests/: test_det.cpp  test_div.cpp  test_inv.cpp  test_minus.cpp  test_mul.cpp  test_mul_scal.cpp  test_nullspace.cpp  test_rank.cpp  test_sub.cpp  test_sum.cpp  test_transpose.cpp
